@@ -67,7 +67,7 @@ if (!defined ($session))
 
 if (defined $ARGV[0] and $ARGV[0] eq "config")
 {
-	print "host_name $host\n";
+	print "host_name $host\n" unless $host eq 'localhost';
 	print "graph_title CPU utilisation
 graph_args --base 1000 -l 0 -u 100
 graph_vlabel %
