@@ -146,7 +146,7 @@ if (defined $partitions{""})
 
 if (defined $ARGV[0] and $ARGV[0] eq "config")
 {
-	print "host_name $host\n";
+	print "host_name $host\n" unless $host eq 'localhost';
 	print "graph_title Filesystem usage (in %)\n";
 	print "graph_args --upper-limit 100 -l 0\n";
 	print "graph_vlabel %\n";
