@@ -142,7 +142,8 @@ graph_vlabel degrees Celcius
 graph_category sensors
 EOM
     print 'graph_order ', join(' ', map { get_id($_) } oid_lex_sort keys %$temps), "\n";
-    print 'host_name ', $session->hostname(), "\n";
+    print 'host_name ', $session->hostname(), "\n"
+      unless $session->hostname eq 'localhost';
       
     for my $sensor (keys %$temps) {
 	my $id = get_id($sensor);
