@@ -140,7 +140,8 @@ graph_vlabel RPM
 graph_category sensors
 EOM
     print 'graph_order ', join(' ', map { get_id($_) } oid_lex_sort keys %$fans), "\n";
-    print 'host_name ', $session->hostname(), "\n";
+    print 'host_name ', $session->hostname(), "\n"
+      unless $session->hostname eq 'localhost';
       
     for my $fan (keys %$fans) {
 	my $id = get_id($fan);
