@@ -110,7 +110,7 @@ foreach my $kept (@keep) # For each temp sensor...
 
 if (defined $ARGV[0] and $ARGV[0] eq "config")
 {
-	print "host_name $host\n";
+	print "host_name $host\n" unless $host eq 'localhost';
 	print "graph_title Fan speed\n";
 	print "graph_args --upper-limit 100 -l 0\n";
 	print "graph_vlabel RPM\n";
