@@ -111,7 +111,7 @@ foreach my $kept (@keep) # For each temp sensor...
 
 if (defined $ARGV[0] and $ARGV[0] eq "config")
 {
-	print "host_name $host\n";
+	print "host_name $host\n" unless $host eq 'localhost';
 	print "graph_title Voltages\n";
 	print "graph_vlabel Volt\n";
 	print "graph_category sensors\n";
