@@ -2,6 +2,7 @@ munin (repository)
 
   * Main: Tuned logging.
   * Plugins: generic/loggrep now supports summing values from log lines.
+  * Plugins: SNMP plugins no longer report host_name when checking localhost.
 
 munin (1.3.2)
 
